cambios en estilo

--- a/public/index.html
+++ b/public/index.html
@@ -15,4 +15,9 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    body{
+      background-color: #333;
+    }
+  </style>
 </html>
